objects/nRetail__Debt__c.object
<CustomObject>
    <description>-DEPRECATED- The debt object stores information about an applicant&apos;s debts.</description>
    <fields>
        <fullName>nRetail__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and represents the account to which this debt belongs.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Available_Amount__c</fullName>
        <description>This field is optional and represents the amount available to borrow on the debt.</description>
        <label>Available Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional and is the contact who has this debt.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Debt_Type__c</fullName>
        <description>This field is required and denotes the type of debt.</description>
        <label>Debt Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly Auto/Lease Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Child Support Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Credit Card Payments</fullName>
                </value>
                <value>
                    <fullName>Monthly Student Loan Payments</fullName>
                </value>
                <value>
                    <fullName>Other Monthly Installment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nRetail__Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines if this debt is excluded from total debt calculations.</description>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nRetail__Excluded_Reason__c</fullName>
        <description>This field is optional and is a short description of the reason why the debt was excluded from total calculations.</description>
        <inlineHelpText>Enter a short description of the reason why the debt was excluded from total calculations.</inlineHelpText>
        <label>Excluded Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nRetail__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is required and represents the loan this debt is tied to.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Maturity_Date__c</fullName>
        <description>This field is optional and represents the date on which the debt matures.</description>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nRetail__Monthly_Payment__c</fullName>
        <description>This field is required and represents the amount paid on the debt every month.</description>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__New_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional, admin-facing field auto-populates when a debt is created from a selected pricing option. It is used primarily for auditing purposes.</description>
        <label>New Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nRetail__New_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is true if the debt is for an Offer or if it came from a Credit Report</description>
        <label>New Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nRetail__Original_Amount__c</fullName>
        <description>This field is optional and specifies the full original amount of the loan. (If the loan is pending approval, this is the intended amount for the loan.)</description>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>nRetail__Pricing_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>-DEPRECATED- Use New_Debt__c field</description>
        <label>-D Pricing Option</label>
        <referenceTo>nRetail__Pricing_Option__c</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nRetail__Principal_Balance__c</fullName>
        <description>This field is optional and represents the amount of principal remaining on the debt.</description>
        <label>Principal Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>-D Debt</label>
    <nameField>
        <label>Debt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Debts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>